k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: openhands-rollout
  namespace: openhands

spec:
  replicas: 2

  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: openhands

  template:
    metadata:
      labels:
        app: openhands

    spec:
      containers:
        - name: openhands

          image: 800960611458.dkr.ecr.ap-south-1.amazonaws.com/openhands:latest

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 3

  strategy:
    canary:

      stableService: openhands-stable
      canaryService: openhands-canary

      trafficRouting:
        alb:
          ingress: openhands-ingress
          servicePort: 80

      steps:
        - setWeight: 10

        - setWeight: 30

        - setWeight: 60

        - setWeight: 100
