k8s/uptime-kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: uptime-kuma

            port:
              number: 80
